# lib/db/src/schema/jobs.ts
@@ -11,6 +11,7 @@ export const jobsTable = pgTable("jobs", {
   notes: text("notes"),
   status: text("status").notNull().default("saved"),
   url: text("url"),
+  applyDate: timestamp("apply_date", { withTimezone: true }),
   createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
   updatedAt: timestamp("updated_at", { withTimezone: true }).notNull().defaultNow().$onUpdate(() => new Date()),
 });
